# datapoint

./: .gitignore  README.md  cloud_formats.html  core_client.html  core_cloud.html  core_item.html  examples.html  genindex.html  index.html  inspiration.html  manifest_example.py.txt  mappers.html  mixins.html  objects.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  stac.html  usage.html
.github/workflows/: ci.yml
_modules/: index.html
_sources/: cloud_formats.rst.txt  core_client.rst.txt  core_cloud.rst.txt  examples.rst.txt  index.rst.txt  inspiration.rst.txt  usage.rst.txt
ceda_datapoint/: __init__.py
ceda_datapoint/core/: asset.py  client.py  cloud.py  item.py  utils.py
ceda_datapoint/mixins/: general.py  properties.py
ceda_datapoint/tests/: test_client.py
datapoint/: __init__.py  core.py
datapoint/core/: __init__.py  client.py  cloud.py  search.py  utils.py
datapoint/dataset/: __init__.py  cloud.py  combine.py  core.py
datapoint/mixins/: properties.py
datapoint/stac/: __init__.py  item.py  properties.py
demo/: Untitled.ipynb  asset_template.json  basic_usage.ipynb  cfa_priority.py  datapoint.ipynb  design2.md  eocis-sst-cdrv3.ipynb  eocis.ipynb  kerchunk_auth.py  stac-api-example.ipynb
demo/ESACCI/: Pystac.ipynb
docs/: example.rst  migrate_notebook.sh  rst_format.py
docs/_build/: .buildinfo  cloud_formats.html  examples.html  genindex.html  index.html  inspiration.html  py-modindex.html  search.html  (+3 more)
release_notes/: release_0.5.0.md
tests/: test_client.py  test_cloud.py  test_item.py
(+40 files in other folders)
